# nspect

./: Cargo.toml  PLAN.md  README.md
.claude/skills/nspect/: SKILL.md
.github/workflows/: ci.yml
src/: analysis.rs  atlas.rs  build_deps.rs  build_plan.rs  cache.rs  classes.rs  cli.rs  cpm.rs  csproj.rs  discovery.rs  endpoints.rs  graph.rs  lib.rs  lookup.rs  main.rs  metrics.rs  model.rs  references.rs  report.rs  signatures.rs  sln.rs  source_scan.rs  spec.rs  tips.rs
tests/: atlas.rs  check.rs  graph.rs  scan.rs  source_scan.rs
tests/fixtures/atlas/Legacy/Widget/: Widget.csproj
tests/fixtures/atlas/Src/Billing/Api/: Api.csproj
tests/fixtures/atlas/Src/Billing/Domain/: Domain.csproj
tests/fixtures/atlas/Src/Billing/Ui/: Ui.csproj
tests/fixtures/conflict/A/: A.csproj
tests/fixtures/cpm/: Directory.Packages.props
tests/fixtures/cpm/src/App/: App.csproj
tests/fixtures/cycle/A/: A.csproj
tests/fixtures/cycle/B/: B.csproj
tests/fixtures/multi/: Multi.sln
tests/fixtures/multi/src/Alpha/: Alpha.csproj
tests/fixtures/multi/src/Beta/: Beta.csproj
tests/fixtures/sourcescan/App/: App.csproj  Program.cs
