[package]
name = "nspect"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bincode = "2"
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
globset = "0.4"
ignore = "0.4"
owo-colors = "4"
petgraph = "0.6"
quick-xml = { version = "0.36", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
tracing = "0.1"
tree-sitter = "0.22"
tree-sitter-c-sharp = "0.21"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
